// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/notifications.ts should handle LOGOUT 1`] = `
Immutable.Map {
  "response": Immutable.List [],
  "isFetching": false,
  "failed": false,
}
`;

exports[`reducers/notifications.ts should handle MARK_NOTIFICATION.SUCCESS - enterprise 1`] = `
Immutable.Map {
  "response": Immutable.List [
    Immutable.Map {
      "hostname": "github.gitify.io",
      "notifications": Immutable.List [
        Immutable.Map {
          "reason": "subscribed",
          "repository": Immutable.Map {
            "id": 1,
            "name": "notifications-test",
            "full_name": "myorg/notifications-test",
            "owner": Immutable.Map {
              "gists_url": "https://github.gitify.io/api/v3/users/myorg/gists{/gist_id}",
              "following_url": "https://github.gitify.io/api/v3/users/myorg/following{/other_user}",
              "followers_url": "https://github.gitify.io/api/v3/users/myorg/followers",
              "subscriptions_url": "https://github.gitify.io/api/v3/users/myorg/subscriptions",
              "received_events_url": "https://github.gitify.io/api/v3/users/myorg/received_events",
              "events_url": "https://github.gitify.io/api/v3/users/myorg/events{/privacy}",
              "avatar_url": "https://github.gitify.io/avatars/u/4?",
              "login": "myorg",
              "url": "https://github.gitify.io/api/v3/users/myorg",
              "starred_url": "https://github.gitify.io/api/v3/users/myorg/starred{/owner}{/repo}",
              "organizations_url": "https://github.gitify.io/api/v3/users/myorg/orgs",
              "repos_url": "https://github.gitify.io/api/v3/users/myorg/repos",
              "gravatar_id": "",
              "site_admin": false,
              "type": "Organization",
              "id": 4,
              "html_url": "https://github.gitify.io/myorg",
            },
            "private": true,
            "html_url": "https://github.gitify.io/myorg/notifications-test",
            "description": null,
            "fork": false,
          },
          "subject": Immutable.Map {
            "title": "Release 0.0.1",
            "url": "https://github.gitify.io/api/v3/repos/myorg/notifications-test/releases/1",
            "latest_comment_url": "https://github.gitify.io/api/v3/repos/myorg/notifications-test/releases/1",
            "type": "Release",
          },
          "subscription_url": "https://github.gitify.io/api/v3/notifications/threads/4/subscription",
          "url": "https://github.gitify.io/api/v3/notifications/threads/4",
          "unread": true,
          "last_read_at": null,
          "updated_at": "2017-05-20T13:02:48Z",
          "id": "4",
        },
        Immutable.Map {
          "reason": "subscribed",
          "repository": Immutable.Map {
            "id": 1,
            "name": "notifications-test",
            "full_name": "myorg/notifications-test",
            "owner": Immutable.Map {
              "gists_url": "https://github.gitify.io/api/v3/users/myorg/gists{/gist_id}",
              "following_url": "https://github.gitify.io/api/v3/users/myorg/following{/other_user}",
              "followers_url": "https://github.gitify.io/api/v3/users/myorg/followers",
              "subscriptions_url": "https://github.gitify.io/api/v3/users/myorg/subscriptions",
              "received_events_url": "https://github.gitify.io/api/v3/users/myorg/received_events",
              "events_url": "https://github.gitify.io/api/v3/users/myorg/events{/privacy}",
              "avatar_url": "https://github.gitify.io/avatars/u/4?",
              "login": "myorg",
              "url": "https://github.gitify.io/api/v3/users/myorg",
              "starred_url": "https://github.gitify.io/api/v3/users/myorg/starred{/owner}{/repo}",
              "organizations_url": "https://github.gitify.io/api/v3/users/myorg/orgs",
              "repos_url": "https://github.gitify.io/api/v3/users/myorg/repos",
              "gravatar_id": "",
              "site_admin": false,
              "type": "Organization",
              "id": 4,
              "html_url": "https://github.gitify.io/myorg",
            },
            "private": true,
            "html_url": "https://github.gitify.io/myorg/notifications-test",
            "description": null,
            "fork": false,
          },
          "subject": Immutable.Map {
            "title": "Bump Version",
            "url": "https://github.gitify.io/api/v3/repos/myorg/notifications-test/pulls/3",
            "latest_comment_url": "https://github.gitify.io/api/v3/repos/myorg/notifications-test/issues/comments/21",
            "type": "PullRequest",
          },
          "subscription_url": "https://github.gitify.io/api/v3/notifications/threads/3/subscription",
          "url": "https://github.gitify.io/api/v3/notifications/threads/3",
          "unread": true,
          "last_read_at": "2017-05-20T14:20:55Z",
          "updated_at": "2017-05-20T15:52:20Z",
          "id": "3",
        },
      ],
    },
  ],
  "isFetching": false,
  "failed": false,
}
`;

exports[`reducers/notifications.ts should handle MARK_NOTIFICATION.SUCCESS - github.com 1`] = `
Immutable.Map {
  "response": Immutable.List [
    Immutable.Map {
      "hostname": "github.com",
      "notifications": Immutable.List [
        Immutable.Map {
          "reason": "subscribed",
          "repository": Immutable.Map {
            "hooks_url": "https://api.github.com/repos/manosim/notifications-test/hooks",
            "branches_url": "https://api.github.com/repos/manosim/notifications-test/branches{/branch}",
            "forks_url": "https://api.github.com/repos/manosim/notifications-test/forks",
            "fork": false,
            "private": true,
            "keys_url": "https://api.github.com/repos/manosim/notifications-test/keys{/key_id}",
            "comments_url": "https://api.github.com/repos/manosim/notifications-test/comments{/number}",
            "trees_url": "https://api.github.com/repos/manosim/notifications-test/git/trees{/sha}",
            "blobs_url": "https://api.github.com/repos/manosim/notifications-test/git/blobs{/sha}",
            "teams_url": "https://api.github.com/repos/manosim/notifications-test/teams",
            "stargazers_url": "https://api.github.com/repos/manosim/notifications-test/stargazers",
            "contributors_url": "https://api.github.com/repos/manosim/notifications-test/contributors",
            "tags_url": "https://api.github.com/repos/manosim/notifications-test/tags",
            "issue_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments{/number}",
            "events_url": "https://api.github.com/repos/manosim/notifications-test/events",
            "issues_url": "https://api.github.com/repos/manosim/notifications-test/issues{/number}",
            "contents_url": "https://api.github.com/repos/manosim/notifications-test/contents/{+path}",
            "merges_url": "https://api.github.com/repos/manosim/notifications-test/merges",
            "name": "notifications-test",
            "languages_url": "https://api.github.com/repos/manosim/notifications-test/languages",
            "commits_url": "https://api.github.com/repos/manosim/notifications-test/commits{/sha}",
            "subscription_url": "https://api.github.com/repos/manosim/notifications-test/subscription",
            "issue_events_url": "https://api.github.com/repos/manosim/notifications-test/issues/events{/number}",
            "labels_url": "https://api.github.com/repos/manosim/notifications-test/labels{/name}",
            "url": "https://api.github.com/manosim/notifications-test",
            "statuses_url": "https://api.github.com/repos/manosim/notifications-test/statuses/{sha}",
            "archive_url": "https://api.github.com/repos/manosim/notifications-test/{archive_format}{/ref}",
            "milestones_url": "https://api.github.com/repos/manosim/notifications-test/milestones{/number}",
            "owner": Immutable.Map {
              "gists_url": "https://api.github.com/users/manosim/gists{/gist_id}",
              "following_url": "https://api.github.com/users/manosim/following{/other_user}",
              "followers_url": "https://api.github.com/users/manosim/followers",
              "subscriptions_url": "https://api.github.com/users/manosim/subscriptions",
              "received_events_url": "https://api.github.com/users/manosim/received_events",
              "events_url": "https://api.github.com/users/manosim/events{/privacy}",
              "avatar_url": "https://avatars0.githubusercontent.com/u/6333409?v=3",
              "login": "manosim",
              "url": "https://api.github.com/users/manosim",
              "starred_url": "https://api.github.com/users/manosim/starred{/owner}{/repo}",
              "organizations_url": "https://api.github.com/users/manosim/orgs",
              "repos_url": "https://api.github.com/users/manosim/repos",
              "gravatar_id": "",
              "site_admin": false,
              "node_id": "MDQ6VXNlcjYzMzM0MDk=",
              "type": "User",
              "id": 6333409,
              "html_url": "https://github.com/manosim",
            },
            "assignees_url": "https://api.github.com/repos/manosim/notifications-test/assignees{/user}",
            "compare_url": "https://api.github.com/repos/manosim/notifications-test/compare/{base}...{head}",
            "git_tags_url": "https://api.github.com/repos/manosim/notifications-test/git/tags{/sha}",
            "node_id": "MDEwOlJlcG9zaXRvcnkzNjAyOTcwNg==",
            "notifications_url": "https://api.github.com/repos/manosim/notifications-test/notifications{?since,all,participating}",
            "downloads_url": "https://api.github.com/repos/manosim/notifications-test/downloads",
            "subscribers_url": "https://api.github.com/repos/manosim/notifications-test/subscribers",
            "id": 57216596,
            "full_name": "manosim/notifications-test",
            "html_url": "https://github.com/manosim/notifications-test",
            "description": "Test Repository",
            "releases_url": "https://api.github.com/repos/manosim/notifications-test/releases{/id}",
            "git_refs_url": "https://api.github.com/repos/manosim/notifications-test/git/refs{/sha}",
            "collaborators_url": "https://api.github.com/repos/manosim/notifications-test/collaborators{/collaborator}",
            "pulls_url": "https://api.github.com/repos/manosim/notifications-test/pulls{/number}",
            "deployments_url": "https://api.github.com/repos/manosim/notifications-test/deployments",
            "git_commits_url": "https://api.github.com/repos/manosim/notifications-test/git/commits{/sha}",
          },
          "subject": Immutable.Map {
            "title": "I am a robot and this is a test!",
            "url": "https://api.github.com/repos/manosim/notifications-test/issues/1",
            "latest_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments/302888448",
            "type": "Issue",
          },
          "subscription_url": "https://api.github.com/notifications/threads/138661096/subscription",
          "url": "https://api.github.com/notifications/threads/138661096",
          "unread": true,
          "last_read_at": "2017-05-20T17:06:51Z",
          "updated_at": "2017-05-20T17:51:57Z",
          "id": "138661096",
        },
        Immutable.Map {
          "reason": "author",
          "repository": Immutable.Map {
            "id": 57216596,
            "name": "notifications-test",
            "full_name": "manosim/notifications-test",
            "owner": Immutable.Map {
              "gists_url": "https://api.github.com/users/manosim/gists{/gist_id}",
              "following_url": "https://api.github.com/users/manosim/following{/other_user}",
              "followers_url": "https://api.github.com/users/manosim/followers",
              "subscriptions_url": "https://api.github.com/users/manosim/subscriptions",
              "received_events_url": "https://api.github.com/users/manosim/received_events",
              "events_url": "https://api.github.com/users/manosim/events{/privacy}",
              "avatar_url": "https://avatars0.githubusercontent.com/u/6333409?v=3",
              "login": "manosim",
              "url": "https://api.github.com/users/manosim",
              "starred_url": "https://api.github.com/users/manosim/starred{/owner}{/repo}",
              "organizations_url": "https://api.github.com/users/manosim/orgs",
              "repos_url": "https://api.github.com/users/manosim/repos",
              "gravatar_id": "",
              "site_admin": false,
              "type": "User",
              "id": 6333409,
              "html_url": "https://github.com/manosim",
            },
            "private": true,
            "html_url": "https://github.com/manosim/notifications-test",
            "description": null,
            "fork": false,
          },
          "subject": Immutable.Map {
            "title": "Improve the UI",
            "url": "https://api.github.com/repos/manosim/notifications-test/issues/4",
            "latest_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments/302885965",
            "type": "Issue",
          },
          "subscription_url": "https://api.github.com/notifications/threads/148827438/subscription",
          "url": "https://api.github.com/notifications/threads/148827438",
          "unread": true,
          "last_read_at": "2017-05-20T16:59:03Z",
          "updated_at": "2017-05-20T17:06:34Z",
          "id": "148827438",
        },
      ],
    },
  ],
  "isFetching": false,
  "failed": false,
}
`;

exports[`reducers/notifications.ts should handle MARK_REPO_NOTIFICATION.SUCCESS - enterprise 1`] = `
Immutable.Map {
  "response": Immutable.List [
    Immutable.Map {
      "hostname": "github.gitify.io",
      "notifications": Immutable.List [],
    },
  ],
  "isFetching": false,
  "failed": false,
}
`;

exports[`reducers/notifications.ts should handle MARK_REPO_NOTIFICATION.SUCCESS - github.com 1`] = `
Immutable.Map {
  "response": Immutable.List [
    Immutable.Map {
      "hostname": "github.gitify.io",
      "notifications": Immutable.List [],
    },
  ],
  "isFetching": false,
  "failed": false,
}
`;

exports[`reducers/notifications.ts should handle NOTIFICATIONS.FAILURE 1`] = `
Immutable.Map {
  "response": Immutable.List [],
  "isFetching": false,
  "failed": true,
}
`;

exports[`reducers/notifications.ts should handle NOTIFICATIONS.REQUEST 1`] = `
Immutable.Map {
  "response": Immutable.List [],
  "isFetching": true,
  "failed": false,
}
`;

exports[`reducers/notifications.ts should handle NOTIFICATIONS.SUCCESS 1`] = `
Immutable.Map {
  "response": Immutable.List [],
  "isFetching": false,
  "failed": false,
}
`;

exports[`reducers/notifications.ts should handle NOTIFICATIONS.SUCCESS 2`] = `
Immutable.Map {
  "response": Immutable.List [
    Immutable.Map {
      "reason": "subscribed",
      "repository": Immutable.Map {
        "hooks_url": "https://api.github.com/repos/manosim/notifications-test/hooks",
        "branches_url": "https://api.github.com/repos/manosim/notifications-test/branches{/branch}",
        "forks_url": "https://api.github.com/repos/manosim/notifications-test/forks",
        "fork": false,
        "private": true,
        "keys_url": "https://api.github.com/repos/manosim/notifications-test/keys{/key_id}",
        "comments_url": "https://api.github.com/repos/manosim/notifications-test/comments{/number}",
        "trees_url": "https://api.github.com/repos/manosim/notifications-test/git/trees{/sha}",
        "blobs_url": "https://api.github.com/repos/manosim/notifications-test/git/blobs{/sha}",
        "teams_url": "https://api.github.com/repos/manosim/notifications-test/teams",
        "stargazers_url": "https://api.github.com/repos/manosim/notifications-test/stargazers",
        "contributors_url": "https://api.github.com/repos/manosim/notifications-test/contributors",
        "tags_url": "https://api.github.com/repos/manosim/notifications-test/tags",
        "issue_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments{/number}",
        "events_url": "https://api.github.com/repos/manosim/notifications-test/events",
        "issues_url": "https://api.github.com/repos/manosim/notifications-test/issues{/number}",
        "contents_url": "https://api.github.com/repos/manosim/notifications-test/contents/{+path}",
        "merges_url": "https://api.github.com/repos/manosim/notifications-test/merges",
        "name": "notifications-test",
        "languages_url": "https://api.github.com/repos/manosim/notifications-test/languages",
        "commits_url": "https://api.github.com/repos/manosim/notifications-test/commits{/sha}",
        "subscription_url": "https://api.github.com/repos/manosim/notifications-test/subscription",
        "issue_events_url": "https://api.github.com/repos/manosim/notifications-test/issues/events{/number}",
        "labels_url": "https://api.github.com/repos/manosim/notifications-test/labels{/name}",
        "url": "https://api.github.com/manosim/notifications-test",
        "statuses_url": "https://api.github.com/repos/manosim/notifications-test/statuses/{sha}",
        "archive_url": "https://api.github.com/repos/manosim/notifications-test/{archive_format}{/ref}",
        "milestones_url": "https://api.github.com/repos/manosim/notifications-test/milestones{/number}",
        "owner": Immutable.Map {
          "gists_url": "https://api.github.com/users/manosim/gists{/gist_id}",
          "following_url": "https://api.github.com/users/manosim/following{/other_user}",
          "followers_url": "https://api.github.com/users/manosim/followers",
          "subscriptions_url": "https://api.github.com/users/manosim/subscriptions",
          "received_events_url": "https://api.github.com/users/manosim/received_events",
          "events_url": "https://api.github.com/users/manosim/events{/privacy}",
          "avatar_url": "https://avatars0.githubusercontent.com/u/6333409?v=3",
          "login": "manosim",
          "url": "https://api.github.com/users/manosim",
          "starred_url": "https://api.github.com/users/manosim/starred{/owner}{/repo}",
          "organizations_url": "https://api.github.com/users/manosim/orgs",
          "repos_url": "https://api.github.com/users/manosim/repos",
          "gravatar_id": "",
          "site_admin": false,
          "node_id": "MDQ6VXNlcjYzMzM0MDk=",
          "type": "User",
          "id": 6333409,
          "html_url": "https://github.com/manosim",
        },
        "assignees_url": "https://api.github.com/repos/manosim/notifications-test/assignees{/user}",
        "compare_url": "https://api.github.com/repos/manosim/notifications-test/compare/{base}...{head}",
        "git_tags_url": "https://api.github.com/repos/manosim/notifications-test/git/tags{/sha}",
        "node_id": "MDEwOlJlcG9zaXRvcnkzNjAyOTcwNg==",
        "notifications_url": "https://api.github.com/repos/manosim/notifications-test/notifications{?since,all,participating}",
        "downloads_url": "https://api.github.com/repos/manosim/notifications-test/downloads",
        "subscribers_url": "https://api.github.com/repos/manosim/notifications-test/subscribers",
        "id": 57216596,
        "full_name": "manosim/notifications-test",
        "html_url": "https://github.com/manosim/notifications-test",
        "description": "Test Repository",
        "releases_url": "https://api.github.com/repos/manosim/notifications-test/releases{/id}",
        "git_refs_url": "https://api.github.com/repos/manosim/notifications-test/git/refs{/sha}",
        "collaborators_url": "https://api.github.com/repos/manosim/notifications-test/collaborators{/collaborator}",
        "pulls_url": "https://api.github.com/repos/manosim/notifications-test/pulls{/number}",
        "deployments_url": "https://api.github.com/repos/manosim/notifications-test/deployments",
        "git_commits_url": "https://api.github.com/repos/manosim/notifications-test/git/commits{/sha}",
      },
      "subject": Immutable.Map {
        "title": "I am a robot and this is a test!",
        "url": "https://api.github.com/repos/manosim/notifications-test/issues/1",
        "latest_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments/302888448",
        "type": "Issue",
      },
      "subscription_url": "https://api.github.com/notifications/threads/138661096/subscription",
      "url": "https://api.github.com/notifications/threads/138661096",
      "unread": true,
      "last_read_at": "2017-05-20T17:06:51Z",
      "updated_at": "2017-05-20T17:51:57Z",
      "id": "138661096",
    },
    Immutable.Map {
      "reason": "author",
      "repository": Immutable.Map {
        "id": 57216596,
        "name": "notifications-test",
        "full_name": "manosim/notifications-test",
        "owner": Immutable.Map {
          "gists_url": "https://api.github.com/users/manosim/gists{/gist_id}",
          "following_url": "https://api.github.com/users/manosim/following{/other_user}",
          "followers_url": "https://api.github.com/users/manosim/followers",
          "subscriptions_url": "https://api.github.com/users/manosim/subscriptions",
          "received_events_url": "https://api.github.com/users/manosim/received_events",
          "events_url": "https://api.github.com/users/manosim/events{/privacy}",
          "avatar_url": "https://avatars0.githubusercontent.com/u/6333409?v=3",
          "login": "manosim",
          "url": "https://api.github.com/users/manosim",
          "starred_url": "https://api.github.com/users/manosim/starred{/owner}{/repo}",
          "organizations_url": "https://api.github.com/users/manosim/orgs",
          "repos_url": "https://api.github.com/users/manosim/repos",
          "gravatar_id": "",
          "site_admin": false,
          "type": "User",
          "id": 6333409,
          "html_url": "https://github.com/manosim",
        },
        "private": true,
        "html_url": "https://github.com/manosim/notifications-test",
        "description": null,
        "fork": false,
      },
      "subject": Immutable.Map {
        "title": "Improve the UI",
        "url": "https://api.github.com/repos/manosim/notifications-test/issues/4",
        "latest_comment_url": "https://api.github.com/repos/manosim/notifications-test/issues/comments/302885965",
        "type": "Issue",
      },
      "subscription_url": "https://api.github.com/notifications/threads/148827438/subscription",
      "url": "https://api.github.com/notifications/threads/148827438",
      "unread": true,
      "last_read_at": "2017-05-20T16:59:03Z",
      "updated_at": "2017-05-20T17:06:34Z",
      "id": "148827438",
    },
  ],
  "isFetching": false,
  "failed": false,
}
`;

exports[`reducers/notifications.ts should return the initial state 1`] = `
Immutable.Map {
  "response": Immutable.List [],
  "isFetching": false,
  "failed": false,
}
`;
